Fix deployment instructions
Summary:
removed y-scrollbar, since its unneccessary to show for scrolling
broke command into another line so that it fits in the code box

Test Plan: n/a

Reviewers: zasgar, #engineering

Reviewed By: zasgar, #engineering

Differential Revision: https://phab.corp.pixielabs.ai/D2130

GitOrigin-RevId: 2ecb53fa98d81d5a3da1ff5a914cb5de29c1fade

--- a/src/ui/src/components/code-snippet/code-snippet.scss
+++ b/src/ui/src/components/code-snippet/code-snippet.scss
@@ -23,4 +23,5 @@
 .code-snippet--content {
   flex: 1;
   overflow-x: auto;
+  overflow-y: hidden;
 }
